added get student to backend, added global button
