# backend/index.js
@@ -6,9 +6,10 @@ import { planyRouter } from "./plany/router.js";
 import { wykladowcyRouter } from "./wykladowcy/router.js";
 import { przedmiotyRouter } from "./przedmioty/router.js";
 import { kierunkiRouter } from "./kierunki/router.js";
-import { errorHanlder } from "./utils.js";
+import { errorHandler, handler } from "./utils.js";
 import { getSwaggerUI } from "./swagger.js";
 import * as OpenApiValidator from "express-openapi-validator";
+import cors from "cors";
 
 async function main() {
   const app = express();
@@ -22,6 +23,8 @@ async function main() {
   await client.connect();
 
   app.use(express.json());
+
+  app.use(cors());
 
   app.use("/swagger", swaggerUi.serve, swaggerUi.setup(getSwaggerUI()));
 
@@ -41,11 +44,22 @@ async function main() {
   app.use("/przedmioty", przedmiotyRouter(client));
   app.use("/kierunki", kierunkiRouter(client));
 
-  app.use((_, res) => {
-    res.status(404).json({ message: "Endpoint not found", code: 404 });
-  });
+  app.get(
+    "/health",
+    handler((req, res) => {
+      res.status(200).json({ message: "OK" });
+    }),
+  );
 
-  app.use(errorHanlder);
+  app.use(
+    handler((_, res) => {
+      console.log("Endpoint not found");
+      throw new NotFoundError("Not Found");
+      // res.status(404).json({ message: "Endpoint not found", code: 404 });
+    }),
+  );
+
+  app.use(errorHandler);
 
   app.listen(port, () => {
     console.log(`Example app listening on port ${port}`);
